--- a/templates/user/changePassword.html.twig
+++ b/templates/user/changePassword.html.twig
@@ -14,6 +14,10 @@
                     <h5 class="h5 mb-5 font-weight-normal text-center">Veuillez saisir un mouveau mot de passe</h5>
                                 <div class="form-floating mb-3">
                                     <ul>
+                                        <li class="list-group-item">{{ form_row(form.oldPassword) }}</li>
+                                    </ul>
+                                    <ul>
+
                                         <li class="list-group-item">{{ form_row(form.password) }}</li>
 
                                     </ul>
