--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+{#        <link rel="stylesheet" href="style.css">#}
     {% endblock%}
 
 </head>
@@ -91,9 +92,8 @@
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                     <li><a class="dropdown-item" href="{{ path('user_edit', {id: app.user.id}) }}"
                                            class="nav-link {% if r == 'user_edit' %}active{% endif %}">Mon profil</a></li>
-                                    <li><a class="dropdown-item" href="{{ path('password_change', {id: app.user.id}) }}"
+                                    <li><a class="dropdown-item" href="{{ path('change_password', {id: app.user.id}) }}"
                                            class="nav-link {% if r == 'password_change' %}active{% endif %}">mot de passe</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
                                 </ul>
                             </div>
                             </li>
