--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -30,6 +30,7 @@
                                         <li class="list-group-item">{{ form_row(form.prenom) }}</li>
                                         <li class="list-group-item">{{ form_row(form.nom) }}</li>
                                         <li class="list-group-item">{{ form_row(form.photo) }}</li>
+                                        <li class="list-group-item">{{ form_row(form.isConsentement) }}</li>
                                     </ul>
                                 </div>
                                 <div class="col-6">
