--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -7,7 +7,7 @@
 
     <div class="row">
         <h2 class="text-center">Mon profil</h2>
-        <div class=" col-10 offset-1">
+        <div class=" col-lg-10 offset-1">
             <div class="card mb-3">
                 <div class="row g-0">
                     <div class="col-md-3 p-3">
