--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %} Modification de mon profil {% endblock %}
+{% block title %} Mon profil {% endblock %}
 
 
 {% block body %}
