--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-body{
-    background-color: red;
-}
+/*body{*/
+/*    background-color: red;*/
+/*}*/
 .row-prod {
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
