--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
                     {% if app.user %}
 
                         <li class="nav-item">
-                            <a href="{{ path('app_annonce_step_one') }}" class="btn btn-outline-danger"> <i class="fa fa-plus"></i>
+                            <a href="{{ path('app_annonce_new') }}" class="btn btn-outline-danger"> <i class="fa fa-plus"></i>
                                 Créer une déclaration</a>
                         </li>
                     {% endif %}
@@ -167,23 +167,33 @@
     </div>
 </footer>
 
+{#<!-- cdn for modernizr, if you haven't included it already -->#}
+{#<script src="http://cdn.jsdelivr.net/webshim/1.12.4/extras/modernizr-custom.js"></script>#}
+{#<!-- polyfiller file to detect and load polyfills -->#}
+{#<script src="http://cdn.jsdelivr.net/webshim/1.12.4/polyfiller.js"></script>#}
+
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 <!-- cdn for modernizr, if you haven't included it already -->
 <script src="http://cdn.jsdelivr.net/webshim/1.12.4/extras/modernizr-custom.js"></script>
 <!-- polyfiller file to detect and load polyfills -->
 <script src="http://cdn.jsdelivr.net/webshim/1.12.4/polyfiller.js"></script>
+<!-- Core theme JS-->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+
 <script>
     webshims.setOptions('waitReady', false);
     webshims.setOptions('forms-ext', {types: 'date'});
     webshims.polyfill('forms forms-ext');
 </script>
-<!-- Core theme JS-->
 {% block javascripts %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-
 {% endblock %}
-{% block endjs %}{% endblock %}
+
 </body>
 </html>
 
