--- a/templates/signalement/_form.html.twig
+++ b/templates/signalement/_form.html.twig
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-5 offset-4 border py-3 px-5">
+        <div class="col-lg-5 offset-4 border py-3 px-5">
 
             {{ form_start(form) }}
             <div class="row mt-5">
